--- a/netlify/netlify.toml
+++ b/netlify/netlify.toml
@@ -1,7 +1,6 @@
 [build]
+  publish = "."
   functions = "netlify/functions"
 
-[[redirects]]
-  from = "/image"
-  to = "/.netlify/functions/image"
-  status = 200
+[build.environment]
+  NODE_VERSION = "18"
